<resources>
    <string name="app_name">Brest Blacklist Beta</string>
    <integer name="com_vk_sdk_AppId">5489677</integer>
    <string name="search_title">Search</string>

    <string name="menu_item_beauty">Beauty and health</string>
    <string name="menu_item_buy">Purchases</string>
    <string name="menu_item_fun">Entertainment</string>
    <string name="menu_item_pub">Public catering</string>
    <string name="menu_item_transport">Transport</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="tab_item_beauty">Beauty and health</string>
    <string name="tab_item_buy">Purchases</string>
    <string name="tab_item_transport">Transport</string>
    <string name="tab_item_pub">Public catering</string>
    <string name="tab_item_fun">Entertainment</string>

    <string name="hashtag_beauty">#Beauty_and_health</string>
    <string name="hashtag_buy">#Purchases</string>
    <string name="hashtag_transport">#Transport</string>
    <string name="hashtag_pub">#Public_catering</string>
    <string name="hashtag_fun">#Entertainment</string>

    <string name="new_crime_dialog_label">New Crime</string>
    <string name="new_crime_title">Title:</string>
    <string name="post_time_mark">Happened in:</string>

    <string name="new_title_hint">Title</string>
    <string name="new_date_hint">Date</string>
    <string name="new_time_hint">Time</string>

    <string name="dialog_error_empty_title">Please, input the Title</string>
    <string name="dialog_choose_category">Please, choose Category</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_OK_button">OK</string>
    <string name="dialog_hashtag_spinner_hint">Please, choose the category:</string>
    <string name="dialog_take_a_picture_button">Take a picture</string>
    <string name="dialog_remove_picture">Remove Picture</string>
    <string name="dialog_set_location">Set location</string>
    <string name="dialog_remove_location">Remove location</string>
    <string name="dialog_toast_image_added">Image added</string>
    <string name="dialog_toast_location_added">Location added</string>
    <string name="dialog_toast_location_removed">Location removed</string>

    <string name="notification_ticker">Publication…</string>
    <string name="notification_title">Uploading</string>
    <string name="notification_text">Message publication</string>

    <string name="toast_uploading_done">Your message will be available soon</string>
    <string name="toast_uploading_error">Message sending error!</string>
    <string name="toast_uploading_photo_error">Photo uploading error!</string>

    <string name="action_sign_in_short">Sign in with VK</string>
    <string name="continue_using_app">Continue using application</string>
    <string name="logout">Logout</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="dialog_photos_of"> of 3</string>

</resources>
